[gd_scene load_steps=7 format=3 uid="uid://ds80alnixdk1d"]

[ext_resource type="Script" path="res://Menus/MenuPrincipal/MenuPrincipal.gd" id="1_sqfgy"]
[ext_resource type="Texture2D" uid="uid://c18x3bge5r4n" path="res://Assets/AssetsMenu/backgorundmenu.jpg" id="2_k04f6"]
[ext_resource type="Texture2D" uid="uid://djfksgdymsc41" path="res://Assets/AssetsMenu/logo.png" id="3_ei5pg"]
[ext_resource type="Texture2D" uid="uid://df2rfmyk1wpyt" path="res://Assets/AssetsMenu/jogar.png" id="4_77seh"]
[ext_resource type="Texture2D" uid="uid://7tevdn18fg7m" path="res://Assets/AssetsMenu/opcoes.png" id="5_gsunh"]
[ext_resource type="Texture2D" uid="uid://qw26640142bh" path="res://Assets/AssetsMenu/sair.png" id="6_b3sv4"]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sqfgy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.406
anchor_top = 1.143
anchor_right = 1.406
anchor_bottom = 1.143
offset_left = -1095.81
offset_top = -512.064
offset_right = -284.808
offset_bottom = -56.064
texture = ExtResource("2_k04f6")
expand_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
position = Vector2(400, 88)
scale = Vector2(0.365, 0.365)
texture = ExtResource("3_ei5pg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 200.0
offset_right = 870.0
offset_bottom = 975.0
scale = Vector2(0.230705, 0.230705)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Jogar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("4_77seh")
flat = true

[node name="Opcoes" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("5_gsunh")
flat = true

[node name="Sair" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("6_b3sv4")
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Opcoes" to="." method="_on_opcoes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
